Fixato alcuni bug qua e là

--- a/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
+++ b/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
@@ -4,8 +4,9 @@ body {
   font-family: Helvetica, sans-serif;
 }
 
-table, th, tr {
-  border: 1px solid black;
+table {
+	width: 100%;
+	border: 1px solid black;
 }
 
 #logoutButton {
