--- a/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
+++ b/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
@@ -15,6 +15,13 @@ table {
 	right: 10px;
 }
 
+#albumPlusButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 #modalWindow {
   display: none;
   position: fixed;
@@ -29,6 +36,7 @@ table {
 }
 
 #modalContent {
+  overflow-y: auto;
   background-color: white;
   margin: auto;
   padding: 20px;
