--- a/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
+++ b/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
@@ -17,12 +17,12 @@ table td, thead {
 }
 
 table tr:nth-child(even) {
-	background-color: #f9f9f9;
+	background-color: #f0f8ff;
 }
 
 table thead {
 	padding: 10px;
-	background-color: #707070;
+	background-color: #295c84;
 	color: white;
 }
 
@@ -79,10 +79,14 @@ table thead {
 .thumbnail {
 	width: 200px;
 	height: auto;
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 .fullImage {
 	max-width: 100%;
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 #imageView table {
@@ -91,6 +95,6 @@ table thead {
 }
 
 #yourComment {
-	width: 100%;
+	width: 500px;
 	height: 100px;
 }
