--- a/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
+++ b/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
@@ -4,6 +4,11 @@ body {
   font-family: Helvetica, sans-serif;
 }
 
+pre, textarea {
+	font-family: Helvetica, sans-serif;
+	font-size: 14px;
+}
+
 table {
 	width: 100%;
 	border: 1px solid black;
