--- a/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
+++ b/GalleriaImmaginiRIA/src/main/webapp/resources/css/gallery.css
@@ -4,6 +4,36 @@ body {
   font-family: Helvetica, sans-serif;
 }
 
+button {
+  background-color: #295c84;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Helvetica, sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms; /* for transitioning between colors */
+  vertical-align: center;
+  user-select: none; /* you cannot select text inside this button */
+}
+
+button:hover,
+button:focus {
+  background-color: #004084;
+}
+
 pre, textarea {
 	font-family: Helvetica, sans-serif;
 	font-size: 14px;
@@ -55,7 +85,7 @@ table thead {
   height: 100%;
   overflow: auto; /* enable scroll if needed */
   overflow-y: auto;
-  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.5); /* black w/ opacity */
 }
 
 #modalContent {
@@ -64,10 +94,11 @@ table thead {
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
+  border-radius: 10px;
   width: 80%;
 }
 
-/* the close Button */
+/* the close button */
 #closeButton {
   color: grey;
   float: right;
@@ -86,12 +117,14 @@ table thead {
 	height: auto;
 	margin-left: auto;
   	margin-right: auto;
+  	border-radius: 5px;
 }
 
 .fullImage {
 	max-width: 100%;
 	margin-left: auto;
   	margin-right: auto;
+  	border-radius: 5px;
 }
 
 #imageView table {
@@ -102,4 +135,5 @@ table thead {
 #yourComment {
 	width: 500px;
 	height: 100px;
+	border-radius: 5px;
 }
